[style] Fix collapsed nested lists on smaller devices

--- a/src/assets/scss/global/_typography.scss
+++ b/src/assets/scss/global/_typography.scss
@@ -88,6 +88,10 @@ blockquote {
 	content: '\2043\00a0';
 }
 
+:where(main) :is(ol, ul) :is(ol, ul) {
+	padding-inline-start: 1em;
+}
+
 @include above-content-column {
 	:where(main) :is(ol, ul):where(:not([class])),
 	:where(main) :is(ol, ul) :is(ol, ul),
@@ -96,7 +100,6 @@ blockquote {
 		list-style-position: outside;
 	}
 
-	:where(main) :is(ol, ul) :is(ol, ul),
 	.list-bullet-offset:is(ol, ul),
 	.expander-content > :is(ol, ul) {
 		padding-inline-start: 1em;
